# booklet-generator

./: LICENSE  README.md  pyproject.toml
src/booklet_generator/: __init__.py  cli.py
src/booklet_generator/_internal/: cli.py  core.py
src/tests/: test_page_order.py
